2012-07-20  Ingo Renner  <ingo.renner@dkd.de>

	!! Renamed tx_solr_FacetRenderer::getFacet() to getFacetProperties()

	* ! API cleanup
	* Changed tx_solr_pluginbase_PluginBase::performAction() to be abstract
	* Added missing abstract tx_solr_pluginbase_PluginBase::render()

	* Fixed bug #35679:Index queue broken by new indexing priority feature, credits Michiel Roos
	* Changed tx_solr_pluginbase_PluginBase to execute postRender() also after renderError()
	* Added feature #35544: Configurable query parameter
	* Fixed bug #35665: An empty search disables the rendering of any plugin output, credits Stefan Sprenger
	* Added tx_solr_facet_FacetOption::isSelectedInFacet()
	* Fixed an issue with the selected state of facet options introduced with #35588, credits Stefan Galinksi
	* Added the tagetPage ID property to the TypoScript constants
	* Added the query GET parameter to constants
	* Added feature #36202: Add option to set domains to be searched, credits Stefan Sprenger
	* Removed title field from result highlighting fields
	* Added OpenSearch support
	* Fixed broken show results of empty query, credits Stefan Galinski
	* Fixed bug #35996: Page Indexer always stores absolute url
	* Fixed bug #35727: Configurable query parameter feature causes bug with the suggestion link
	* Added feature #34652: Add option search.faceting.keepAllFacetsOnSelection, credits Cornel Boppart
	* Changed EXT:news Index Queue configuration to index tags into separate field, using keywords field for keywords
	* Changed SOLR_RELATION to resolve labels for relations correctly even with intermediate tables, credits Steffen Ritter
	* Added a generic language schema without stemming for languages we do not have a schema for
	* Fixed bug #36623: Index Queue initialization crashes with erronous mount page
	* Updated SolrPhpClient to r62
	* Change tx_solr_ConnectionManager::getConfiguredSolrConnections(): extract getConfiguredSolrConnectionByRootPage()
	* Added tx_solr_Site::getRootPage()