@@ -33,6 +33,16 @@
 class tx_solr_facet_NumericRangeFacetRenderer extends tx_solr_facet_AbstractFacetRenderer {
 
 	/**
+	 * Provides the internal type of facets the renderer handles.
+	 * The type is one of field, range, or query.
+	 *
+	 * @return string Facet internal type
+	 */
+	public static function getFacetInternalType() {
+		return tx_solr_facet_Facet::TYPE_RANGE;
+	}
+
+	/**
 	 * Renders a numeric range facet by providing a slider
 	 *
 	 * @see tx_solr_facet_AbstractFacetRenderer::renderFacet()
